# nonebot-plugin-uuid

./: README.md  __init__.py  pyproject.toml
nonebot_plugin_uuid/: __init__.py
